2008-12-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-undo:, -redo:, -validateMenuItem:): Move
	implementation from here ...
	* Source/NSWindow.m (-undo:, -redo:, -validateMenuItem:): ... to
	here. Also validate close, miniaturize, and zoom actions.

2008-12-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSound.m:
	* Source/NSWorkspace.m:
	* Source/NSPasteboard.m:
	* Source/GNUmakefile.preamble:
	Remove code which would not locate tools properly and fixup.

2008-12-03 22:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Check to make sure the menu has more than
	0 entries in _setMain:.

2008-12-03 17:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocumentController.m: Fixed fileExtensionFromType:,
	bug #24894

2008-12-03 01:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSInfoPanel.m: -[GSInfoPanel initWithDictionary:]
	don't show authors in the info panel if there are none given
	in the dictionary.

2008-12-03 01:11-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSApplication.m: Always resize icon to 48x48 so that
	icons larger than this will display correctly.  Change made in
	setApplicationIconImage:. 

2008-12-02 23:55-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibLoading.m: Added some new methods to address
	bug #24985.
	* Source/NSMenu.m: Removed some spaces after a close brace.

2008-12-02 19:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSApplication.m: Fix for bug #24785. 

2008-12-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBrowser.m: fix uninitialised variable.
	* Source/GNUmakefile:
	* PrinterTypes/GNUmakefile:
	* Documentation/GuiUser/GNUmakefile:
	* Documentation/GNUmakefile:
	* Documentation/General/GNUmakefile:
	* Resources/GNUmakefile:
	* Panels/GNUmakefile:
	* GNUmakefile:
	* Printing/GSLPR/GNUmakefile:
	* ColorPickers/GNUmakefile:
	* Model/GNUmakefile: